# Buddha

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindCImg.cmake
src/: Buddha.cpp  Buddha.h  BuddhaWorker.cpp  ConfigLoader.cpp  ConfigLoader.h  Utility.hpp  main.cpp
